[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Sprites/projectile.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/SelectorProjectile.gd" type="Script" id=2]



[sub_resource type="CircleShape2D" id=1]
radius = 12.7166

[node name="Selector" type="Area2D"]
script = ExtResource( 2 )

[node name="projectile" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DestroySelf" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Selector_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Selector_body_entered"]
[connection signal="timeout" from="DestroySelf" to="." method="_on_DestroySelf_timeout"]
